@@ -1,3 +1,8 @@
+
+	* src/org/jcae/mesh/xmldata/MeshReader.java
+	  src/org/jcae/mesh/amibe/util/UNVReader.java: Add nodes to mesh
+	if its traitsBuilder requested it.  Update calls to buildAdjacency().
+
 Sat Oct 13 22:52:30 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Really
